# malicious-flang-ctf

./: .gitignore  NOTICE.md  README.md  build.gradle  settings.gradle
app/: build.gradle  gradle.properties
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/cflang/: Makefile  run.sh
app/doc/: accuracy_ezragt.txt
app/metadata/en-US/: short_description.txt
app/metadata/en-US/changelogs/: 11.txt  2.txt  (+5 more)
app/nnue-training/: debug_features.py  evaluate_position.py  setup.sh  test_parser.py  trace_parser.py  train.py
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  evaluation.c  fast_board.c  fast_move_generator.c  fast_transposition.c  fast_zobrist.c  nnue.c  test_nnue.c
app/src/main/cpp/include/: bitboard_utils.h  fast_board.h  fast_bot.h  fast_evaluation.h  fast_move_order.h  fast_zobrist.h  nnue_model.h
cflang/: README.md  run_nnue.sh
doc/: startingPos.txt
flang-lib/: build.gradle
hidden_jar/hidden_jar/: pom.xml  python_encryption.py  readme.md
metadata/de/: full_description.txt  short_description.txt
metadata/en-US/: full_description.txt
metadata/en-US/changelogs/: 1.txt  13.txt  15.txt  19.txt  20.txt  4.txt  5.txt  6.txt  7.txt  8.txt
metadata/ru-RU/: full_description.txt  short_description.txt
network-api/: build.gradle
nnue-training/: .gitignore  README.md  board_parser.py  dataset.py  export.py  model.py  requirements.txt
server/: package-lock.json  package.json  server.js  users.db
server/files/: decoy.dex  decoy.kt  new_view.dex  new_view.kt
server/routes/: updates.js  user.js  view.js
(+270 files in other folders)
